# OTUS_IP_filtration

./: CMakeLists.txt  test_version.cpp
.github/workflows/: release.yml
